--- a/styles.css
+++ b/styles.css
@@ -221,6 +221,10 @@ h4 {
     #modal {
         transform: translate(0, -107%);
     }
+
+    .inner-circle h1 {
+        font-size: 85px;
+    }
 }
 
 .break-full-width {
