--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ h4 {
     width: 100%;
     height: 100vh;
     z-index: 20;
-    background-color: rgba(0, 0, 0, 0.);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .break-full-width {
